--- a/areventsource/notebooks/archiver-reader.db.ipynb
+++ b/areventsource/notebooks/archiver-reader.db.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Retrieval based on the Databroker header"
+    "## Integration with Databroker (e.g., within NSLS-II configure_base)"
    ]
   },
   {
@@ -82,11 +82,33 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select header\n",
     "db = Broker.named('csx')\n",
-    "hdr = db[69209]"
+    "\n",
+    "for key in ArchiverReader.configs.keys():\n",
+    "    aes = ArchiverReader.from_config(ArchiverReader.configs[key])\n",
+    "    db.add_event_source(aes)\n",
+    "    \n",
+    "len(db.event_sources)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Retrieval based on the Databroker Interface"
    ]
   },
   {
@@ -95,24 +117,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "660"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# get the csx pv tables\n",
-    "ar_csx  = ArchiverReader.named('csx')\n",
-    "dfs_csx = ar_csx.tables_given_header(hdr)\n",
-    "df = dfs_csx['pv1']\n",
-    "len(df)"
+    "# select header\n",
+    "hdr = db[69209]"
    ]
   },
   {
@@ -124,53 +132,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>data</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-10-06 21:54:28.966</td>\n",
-       "      <td>0.004190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-10-06 21:54:29.066</td>\n",
-       "      <td>0.004188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-10-06 21:54:29.166</td>\n",
-       "      <td>0.004192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-10-06 21:54:29.266</td>\n",
-       "      <td>0.004192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-10-06 21:54:29.366</td>\n",
-       "      <td>0.004202</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                     time      data\n",
-       "0 2016-10-06 21:54:28.966  0.004190\n",
-       "1 2016-10-06 21:54:29.066  0.004188\n",
-       "2 2016-10-06 21:54:29.166  0.004192\n",
-       "3 2016-10-06 21:54:29.266  0.004192\n",
-       "4 2016-10-06 21:54:29.366  0.004202"
+       "['baseline', 'primary', 'archiver_test_watT', 'archiver_pv1']"
       ]
      },
      "execution_count": 6,
@@ -179,7 +142,8 @@
     }
    ],
    "source": [
-    "df.head()"
+    "# check stream names\n",
+    "db.stream_names_given_header(hdr)"
    ]
   },
   {
@@ -192,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "660"
       ]
      },
      "execution_count": 7,
@@ -201,10 +165,9 @@
     }
    ],
    "source": [
-    "# get the acceerator pv tables\n",
-    "ar_acc = ArchiverReader.named('accelerator')\n",
-    "dfs_acc = ar_acc.tables_given_header(hdr)\n",
-    "df = dfs_acc['test_watT']\n",
+    "# get table for selected pv\n",
+    "stream_name = 'archiver_pv1'\n",
+    "df = db.get_table(hdr, stream_name)\n",
     "len(df)"
    ]
   },
@@ -224,34 +187,52 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>time</th>\n",
-       "      <th>data</th>\n",
+       "      <th>archiver_pv1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seq_num</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-10-06 21:53:57.425</td>\n",
-       "      <td>80.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-10-06 21:55:07.431</td>\n",
-       "      <td>80.4</td>\n",
+       "      <td>2016-10-06 21:54:28.966</td>\n",
+       "      <td>0.004190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-10-06 21:55:09.427</td>\n",
-       "      <td>80.3</td>\n",
+       "      <td>2016-10-06 21:54:29.066</td>\n",
+       "      <td>0.004188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-06 21:54:29.166</td>\n",
+       "      <td>0.004192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-06 21:54:29.266</td>\n",
+       "      <td>0.004192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2016-10-06 21:54:29.366</td>\n",
+       "      <td>0.004202</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     time  data\n",
-       "0 2016-10-06 21:53:57.425  80.3\n",
-       "1 2016-10-06 21:55:07.431  80.4\n",
-       "2 2016-10-06 21:55:09.427  80.3"
+       "                           time  archiver_pv1\n",
+       "seq_num                                      \n",
+       "1       2016-10-06 21:54:28.966      0.004190\n",
+       "2       2016-10-06 21:54:29.066      0.004188\n",
+       "3       2016-10-06 21:54:29.166      0.004192\n",
+       "4       2016-10-06 21:54:29.266      0.004192\n",
+       "5       2016-10-06 21:54:29.366      0.004202"
       ]
      },
      "execution_count": 8,
@@ -260,19 +241,105 @@
     }
    ],
    "source": [
-    "df"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get table for selected pv\n",
+    "stream_name = 'archiver_test_watT'\n",
+    "df = db.get_table(hdr, stream_name)\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>archiver_test_watT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seq_num</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-06 21:53:57.425</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-06 21:55:07.431</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-06 21:55:09.427</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           time  archiver_test_watT\n",
+       "seq_num                                            \n",
+       "1       2016-10-06 21:53:57.425                80.3\n",
+       "2       2016-10-06 21:55:07.431                80.4\n",
+       "3       2016-10-06 21:55:09.427                80.3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Retrieval based on timestamps"
+    "## Data Retrieval using stand-alone ArchiverReaders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -296,13 +363,14 @@
        "7326"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get the csx pv tables\n",
+    "# get the csx pv tables for given time interval\n",
+    "ar_csx  = ArchiverReader.named('csx')\n",
     "dfs_csx = ar_csx.tables_given_times(since, until)\n",
     "df = dfs_csx['pv1']\n",
     "len(df)"
@@ -310,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -321,13 +389,14 @@
        "53"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# get the accelerator pv tables\n",
+    "# get the accelerator pv tables for given time interval\n",
+    "ar_acc = ArchiverReader.named('accelerator')\n",
     "dfs_acc = ar_acc.tables_given_times(since, until)\n",
     "df = dfs_acc['test_watT']\n",
     "len(df)"
