--- a/areventsource/notebooks/archiver-reader.db.5.18.18.ipynb
+++ b/areventsource/notebooks/archiver-reader.db.5.18.18.ipynb
@@ -27,9 +27,7 @@
     "from databroker import Broker\n",
     "\n",
     "# make graphics inline\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from databroker.eventsource.archiver import ArchiverReader"
+    "%matplotlib inline"
    ]
   },
   {
@@ -49,33 +47,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['mds'])"
+       "dict_keys(['arch_acc', 'mds', 'arch_csx'])"
       ]
      },
      "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db = Broker.named('csx')\n",
-    "db.ES.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['mds', 'arch_acc', 'arch_csx'])"
-      ]
-     },
-     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,29 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pv1': 'XF:23ID-ID{BPM}Val:PosXS-I'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arch_csx.add_pvs({'pv1':'XF:23ID-ID{BPM}Val:PosXS-I'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -190,12 +143,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'test_watT': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
+      "arch_csx {'pv1': 'XF:23ID-ID{BPM}Val:PosXS-I'}\n"
      ]
     }
    ],
    "source": [
-    "print(arch_acc.get_pvs())"
+    "arch_csx.add_pvs({'pv1':'XF:23ID-ID{BPM}Val:PosXS-I'})\n",
+    "print(arch_csx.name, arch_csx.get_pvs())"
    ]
   },
   {
@@ -207,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -227,10 +181,10 @@
     {
      "data": {
       "text/plain": [
-       "['primary', 'baseline', 'test_watT', 'pv1']"
+       "['primary', 'baseline', 'pv1', 'test_watT']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +207,7 @@
        "660"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -329,7 +283,7 @@
        "5       2016-10-06 21:54:29.366  0.004202"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -351,7 +305,7 @@
        "3"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -415,85 +369,13 @@
        "3       2016-10-06 21:55:09.427       80.3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Retrieval using stand-alone ArchiverReaders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# define timestamps\n",
-    "since = db[69209]['start']['time']\n",
-    "until = db[69211]['stop']['time']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3529"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get the csx pv tables for given time interval\n",
-    "arch_csx  = ArchiverReader.named('arch_csx')\n",
-    "dfs_csx = arch_csx.tables_given_times(since, until)\n",
-    "df = dfs_csx['pv1']\n",
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get the accelerator pv tables for given time interval\n",
-    "arch_acc = ArchiverReader.named('arch_acc')\n",
-    "dfs_acc = arch_acc.tables_given_times(since, until)\n",
-    "df = dfs_acc['test_watT']\n",
-    "len(df)"
    ]
   },
   {
@@ -523,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
