updated the ArchiverEventSource demo

--- a/areventsource/notebooks/demo.standalone.ipynb
+++ b/areventsource/notebooks/demo.standalone.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,44 +31,34 @@
     "from databroker import Broker\n",
     "\n",
     "# make graphics inline\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "from archiver import ArchiverEventSource"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Databroker configuration"
+    "## Databroker Configuration"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['arch_acc', 'mds', 'arch_csx'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db = Broker.named('csx_with_archivers')\n",
-    "db.ES.keys()"
+    "db = Broker.named('csx')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing Archiver Event Sources"
+    "## Creating Archiver Event Sources"
    ]
   },
   {
@@ -90,7 +84,8 @@
     }
    ],
    "source": [
-    "arch_csx  = db.ES['arch_csx']\n",
+    "config_csx = {'name' : 'arch_csx', 'url' : 'http://xf23id-ca.cs.nsls2.local:17668'}\n",
+    "arch_csx  = ArchiverEventSource(config_csx)\n",
     "print(arch_csx.name, arch_csx.get_pvs())"
    ]
   },
@@ -114,20 +109,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arch_acc {'test_watT': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
+      "arch_acc {}\n"
      ]
     }
    ],
    "source": [
-    "arch_acc = db.ES['arch_acc']\n",
+    "config_acc = {'name' : 'arch_acc', 'url' : 'http://arcapp01.cs.nsls2.local:17668'}\n",
+    "arch_acc = ArchiverEventSource(config_acc)\n",
     "print(arch_acc.name, arch_acc.get_pvs())"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Adding PV"
    ]
@@ -153,17 +147,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Retrieval based on the Databroker Interface"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arch_acc {'pv2': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arch_acc.add_pvs({'pv2': 'UT:SB1-Cu:1{}T:Prmry-I'})\n",
+    "print(arch_acc.name, arch_acc.get_pvs())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Retrieval based on Timestamps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -173,50 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['primary', 'baseline', 'pv1', 'test_watT']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check stream names\n",
-    "db.stream_names_given_header(hdr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "660"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# get table for selected pv\n",
-    "stream_name = 'pv1'\n",
-    "df = hdr.table(stream_name)\n",
-    "len(df)"
+    "# define timestamps\n",
+    "since  = hdr['start']['time']\n",
+    "until  = hdr['stop']['time'] + 10*(hdr['stop']['time'] - since)"
    ]
   },
   {
@@ -228,59 +207,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>pv1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seq_num</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-10-06 21:54:28.966</td>\n",
-       "      <td>0.004190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-10-06 21:54:29.066</td>\n",
-       "      <td>0.004188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-10-06 21:54:29.166</td>\n",
-       "      <td>0.004192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-10-06 21:54:29.266</td>\n",
-       "      <td>0.004192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2016-10-06 21:54:29.366</td>\n",
-       "      <td>0.004202</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                           time       pv1\n",
-       "seq_num                                  \n",
-       "1       2016-10-06 21:54:28.966  0.004190\n",
-       "2       2016-10-06 21:54:29.066  0.004188\n",
-       "3       2016-10-06 21:54:29.166  0.004192\n",
-       "4       2016-10-06 21:54:29.266  0.004192\n",
-       "5       2016-10-06 21:54:29.366  0.004202"
+       "7326"
       ]
      },
      "execution_count": 9,
@@ -289,7 +217,10 @@
     }
    ],
    "source": [
-    "df.head()"
+    "# get the csx pv tables\n",
+    "dfs_csx = arch_csx.tables_given_times(since, until)\n",
+    "df = dfs_csx['pv1']\n",
+    "len(df)"
    ]
   },
   {
@@ -301,8 +232,66 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-06 21:54:28.966371</td>\n",
+       "      <td>0.004190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-06 21:54:29.066417</td>\n",
+       "      <td>0.004188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-06 21:54:29.166479</td>\n",
+       "      <td>0.004192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-10-06 21:54:29.266535</td>\n",
+       "      <td>0.004192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-06 21:54:29.366593</td>\n",
+       "      <td>0.004202</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "3"
+       "                        time      data\n",
+       "0 2016-10-06 21:54:28.966371  0.004190\n",
+       "1 2016-10-06 21:54:29.066417  0.004188\n",
+       "2 2016-10-06 21:54:29.166479  0.004192\n",
+       "3 2016-10-06 21:54:29.266535  0.004192\n",
+       "4 2016-10-06 21:54:29.366593  0.004202"
       ]
      },
      "execution_count": 10,
@@ -311,10 +300,7 @@
     }
    ],
    "source": [
-    "# get table for selected pv\n",
-    "stream_name = 'test_watT'\n",
-    "df = hdr.table(stream_name)\n",
-    "len(df)"
+    "df.head()"
    ]
   },
   {
@@ -326,35 +312,78 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the accelerator pv tables\n",
+    "dfs_acc = arch_acc.tables_given_times(since, until)\n",
+    "df = dfs_acc['pv2']\n",
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>time</th>\n",
-       "      <th>test_watT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>seq_num</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-10-06 21:53:57.425</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-10-06 21:53:57.425835</td>\n",
        "      <td>80.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-10-06 21:55:07.431</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-10-06 21:55:07.431820</td>\n",
        "      <td>80.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-10-06 21:55:09.427219</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2016-10-06 21:55:09.427</td>\n",
+       "      <td>2016-10-06 21:55:35.442427</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-10-06 21:55:37.444693</td>\n",
        "      <td>80.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -362,14 +391,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                           time  test_watT\n",
-       "seq_num                                   \n",
-       "1       2016-10-06 21:53:57.425       80.3\n",
-       "2       2016-10-06 21:55:07.431       80.4\n",
-       "3       2016-10-06 21:55:09.427       80.3"
+       "                        time  data\n",
+       "0 2016-10-06 21:53:57.425835  80.3\n",
+       "1 2016-10-06 21:55:07.431820  80.4\n",
+       "2 2016-10-06 21:55:09.427219  80.3\n",
+       "3 2016-10-06 21:55:35.442427  80.4\n",
+       "4 2016-10-06 21:55:37.444693  80.3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
