--- a/areventsource/notebooks/demo.db.ipynb
+++ b/areventsource/notebooks/demo.db.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,16 +31,14 @@
     "from databroker import Broker\n",
     "\n",
     "# make graphics inline\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from databroker.eventsource.archiver import ArchiverReader"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Databroker configuration"
+    "## Databroker Configuration"
    ]
   },
   {
@@ -49,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['mds'])"
+       "dict_keys(['mds', 'arch_acc', 'arch_csx'])"
       ]
      },
      "execution_count": 2,
@@ -59,29 +61,6 @@
    ],
    "source": [
     "db = Broker.named('csx')\n",
-    "db.ES.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['mds', 'arch_acc', 'arch_csx'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "db = Broker.named('csx_with_archivers')\n",
     "db.ES.keys()"
    ]
   },
@@ -101,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arch_acc {'test_watT': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
+      "arch_acc {}\n"
      ]
     }
    ],
@@ -150,11 +129,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding PV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arch_csx {'pv1': 'XF:23ID-ID{BPM}Val:PosXS-I'}\n"
+     ]
+    }
+   ],
    "source": [
-    "Adding PV"
+    "arch_csx.add_pvs({'pv1':'XF:23ID-ID{BPM}Val:PosXS-I'})\n",
+    "print(arch_csx.name, arch_csx.get_pvs())"
    ]
   },
   {
@@ -165,37 +162,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'pv1': 'XF:23ID-ID{BPM}Val:PosXS-I'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arch_csx.add_pvs({'pv1':'XF:23ID-ID{BPM}Val:PosXS-I'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'test_watT': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
+      "arch_acc {'pv2': 'UT:SB1-Cu:1{}T:Prmry-I'}\n"
      ]
     }
    ],
    "source": [
-    "print(arch_acc.get_pvs())"
+    "arch_acc.add_pvs({'pv2': 'UT:SB1-Cu:1{}T:Prmry-I'})\n",
+    "print(arch_acc.name, arch_acc.get_pvs())"
    ]
   },
   {
@@ -207,14 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# select header\n",
     "hdr = db[69209]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['baseline', 'primary', 'pv2', 'pv1']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check stream names\n",
+    "db.stream_names_given_header(hdr)"
    ]
   },
   {
@@ -227,33 +226,10 @@
     {
      "data": {
       "text/plain": [
-       "['primary', 'baseline', 'test_watT', 'pv1']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check stream names\n",
-    "db.stream_names_given_header(hdr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "660"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -276,6 +252,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -292,27 +281,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-10-06 21:54:28.966</td>\n",
+       "      <td>2016-10-06 21:54:28.966371</td>\n",
        "      <td>0.004190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-10-06 21:54:29.066</td>\n",
+       "      <td>2016-10-06 21:54:29.066417</td>\n",
        "      <td>0.004188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2016-10-06 21:54:29.166</td>\n",
+       "      <td>2016-10-06 21:54:29.166479</td>\n",
        "      <td>0.004192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2016-10-06 21:54:29.266</td>\n",
+       "      <td>2016-10-06 21:54:29.266535</td>\n",
        "      <td>0.004192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2016-10-06 21:54:29.366</td>\n",
+       "      <td>2016-10-06 21:54:29.366593</td>\n",
        "      <td>0.004202</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -320,13 +309,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                           time       pv1\n",
-       "seq_num                                  \n",
-       "1       2016-10-06 21:54:28.966  0.004190\n",
-       "2       2016-10-06 21:54:29.066  0.004188\n",
-       "3       2016-10-06 21:54:29.166  0.004192\n",
-       "4       2016-10-06 21:54:29.266  0.004192\n",
-       "5       2016-10-06 21:54:29.366  0.004202"
+       "                              time       pv1\n",
+       "seq_num                                     \n",
+       "1       2016-10-06 21:54:28.966371  0.004190\n",
+       "2       2016-10-06 21:54:29.066417  0.004188\n",
+       "3       2016-10-06 21:54:29.166479  0.004192\n",
+       "4       2016-10-06 21:54:29.266535  0.004192\n",
+       "5       2016-10-06 21:54:29.366593  0.004202"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
       ]
      },
      "execution_count": 11,
@@ -335,7 +346,10 @@
     }
    ],
    "source": [
-    "df.head()"
+    "# get table for selected pv\n",
+    "stream_name = 'pv2'\n",
+    "df = hdr.table(stream_name)\n",
+    "len(df)"
    ]
   },
   {
@@ -347,39 +361,27 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get table for selected pv\n",
-    "stream_name = 'test_watT'\n",
-    "df = hdr.table(stream_name)\n",
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>time</th>\n",
-       "      <th>test_watT</th>\n",
+       "      <th>pv2</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>seq_num</th>\n",
@@ -390,17 +392,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-10-06 21:53:57.425</td>\n",
+       "      <td>2016-10-06 21:53:57.425835</td>\n",
        "      <td>80.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-10-06 21:55:07.431</td>\n",
+       "      <td>2016-10-06 21:55:07.431820</td>\n",
        "      <td>80.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2016-10-06 21:55:09.427</td>\n",
+       "      <td>2016-10-06 21:55:09.427219</td>\n",
        "      <td>80.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -408,92 +410,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                           time  test_watT\n",
-       "seq_num                                   \n",
-       "1       2016-10-06 21:53:57.425       80.3\n",
-       "2       2016-10-06 21:55:07.431       80.4\n",
-       "3       2016-10-06 21:55:09.427       80.3"
+       "                              time   pv2\n",
+       "seq_num                                 \n",
+       "1       2016-10-06 21:53:57.425835  80.3\n",
+       "2       2016-10-06 21:55:07.431820  80.4\n",
+       "3       2016-10-06 21:55:09.427219  80.3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Retrieval using stand-alone ArchiverReaders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# define timestamps\n",
-    "since = db[69209]['start']['time']\n",
-    "until = db[69211]['stop']['time']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3529"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get the csx pv tables for given time interval\n",
-    "arch_csx  = ArchiverReader.named('arch_csx')\n",
-    "dfs_csx = arch_csx.tables_given_times(since, until)\n",
-    "df = dfs_csx['pv1']\n",
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get the accelerator pv tables for given time interval\n",
-    "arch_acc = ArchiverReader.named('arch_acc')\n",
-    "dfs_acc = arch_acc.tables_given_times(since, until)\n",
-    "df = dfs_acc['test_watT']\n",
-    "len(df)"
    ]
   },
   {
