--- a/mongohxn/tests/scan.53471.db.ipynb
+++ b/mongohxn/tests/scan.53471.db.ipynb
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "print(any(results), len(results))"
+    "print(all(results), len(results))"
    ]
   },
   {
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "print(any(results), len(results))"
+    "print(all(results), len(results))"
    ]
   },
   {
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "print(any(results), len(results))"
+    "print(all(results), len(results))"
    ]
   },
   {
